# NekkoAPI

./: .dockerignore  .gitignore  .gitmodules  Makefile  NOTICE  README.md  pyproject.toml
.github/workflows/: continuous_integration.yml  docker-publish.yml  load-balancer-docker-publish.yml  publish_image.yml
benchmarks/: Dockerfile.llmperf  Makefile  README.md  docker-compose.yml
benchmarks/config/: nekko_settings.json  otel-collector-config.yaml  specs.yaml
benchmarks/scripts/: collect_benchmarks.py  combine_results.py  ollama-setup.sh
docker/baked/: Dockerfile
docker/simple/: Dockerfile  run.sh
docker/web/: .gitignore  docker-compose.yml  nginx.conf  otel-collector-config.yaml
examples/: openai-client.py  settings.json
examples/docker-compose/api/: docker-compose.yml
examples/docker-compose/ui/: docker-compose.yml  nginx.conf  settings.json
examples/k8s/: Dockerfile  Makefile  README.md  build-images.sh  run.sh
examples/k8s/manifests/: grafana.yml  nekko-api.yaml  nekko-lb.yml  nekko-sm-ds.yml  open-webui.yml  prometheus.yml
examples/load-balancer/: Dockerfile  Makefile  go.mod  go.sum  main.go  worker-pod-template.yaml
examples/load-balancer/request_router/: request_router.go
examples/load-balancer/worker_manager/: worker_manager.go
llama_cpp/: _internals.py  llama.py  llama_chat_format.py  llama_cpp.py  llama_types.py
llama_cpp/server/: app.py  model.py  settings.py  transaction_logs.py  types.py
perf_test/: Dockerfile.llmperf  Makefile  README.md  docker-compose.yml  main.py  requirements.txt
perf_test/config/: nekko_settings.json  specs.yaml
tests/: constant_data.py  test_llama.py  test_nekko.py
